plugins {
    id 'java'
    id 'war'
    id 'org.gretty' version '4.1.2'
}

group = 'com.tartarugacometasystem'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()
}

dependencies {
    // Jakarta Servlet API 6.0 (Tomcat 10+)
    providedCompile 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    providedCompile 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.1'

    // JSTL para Jakarta (CORRIGIDO - adicionado API também)
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'

    // PostgreSQL Driver (CORRETO - já estava aqui)
    implementation 'org.postgresql:postgresql:42.7.1'

    // >>> REMOVIDO: A dependência do MySQL não é necessária, pois você usa PostgreSQL <<<
    // runtimeOnly 'mysql:mysql-connector-java:8.0.33' 

    // JUnit para testes
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

gretty {
    servletContainer = 'tomcat10'
    httpPort = 8080
    contextPath = '/tartaruga-cometa'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}
